# Open-Transactions-old

./: .gitignore  ABOUT  Android.mk  Doxyfile  GETTING-STARTED  GETTING-STARTED.txt  INSTALL  INSTALL-Android.txt  INSTALL-DebianStable.txt  INSTALL-Mac-Linux-FreeBSD.txt  INSTALL-Mac-or-Linux.txt  INSTALL-Windows.txt  LICENSE-AND-CREDITS  LICENSE-AND-CREDITS.txt  Makefile  Makefile.am  PUBKEY-FellowTraveler.asc  README  README.md  VERSION  autogen.sh  configure.ac  opentxs.pc.in  resource.h
API/: OpenTransactions.cpp  OpenTransactions.h  OpenTransactionsJNI.cpp  OpenTransactionsJNI.h  OpenTransactionsJNI.java
OTLib/: Android.mk  Bitcoin.pb.cpp  Bitcoin.pb.h  Bitcoin.proto  CREDITS.txt  Generics.pb.cpp  Generics.pb.h  INSTALL.txt  Makefile  Makefile.linux  Markets.pb.cpp  Moneychanger.pb.cpp  OTASCIIArmor.cpp  OTASCIIArmor.h  OTAccount.cpp  OTAccount.h  OTAgreement.cpp  OTAgreement.h  OTAssetContract.cpp  OTAssetContract.h  OTAsymmetricKey.cpp  OTAsymmetricKey.h  OTBasket.cpp  OTBasket.h  OTBylaw.cpp  OTBylaw.h  OTCheque.cpp  OTCheque.h  OTContract.cpp  OTContract.h  OTCron.cpp  OTCron.h  OTCronItem.cpp  OTCronItem.h  OTData.cpp  OTData.h  OTDataCheck.cpp  OTDataCheck.h  OTEnvelope.cpp  OTEnvelope.h  (+77 more)
OTLib/Lucre/: CHANGES  LUCRE_LICENSE.txt  bank-new.cpp  bank-sign.cpp  bank-verify.cpp  bank.h  bankdemo.cpp  bankimp.cpp  banktest.cpp  (+2 more)
debian/: changelog  control  copyright  rules
docs/: CLIENT-COMMANDS.txt  GETTING-STARTED.txt  INSTALL-Android.txt  INSTALL-DebianStable.txt  INSTALL-Debian_Ubuntu.txt  INSTALL-Fedora.txt  INSTALL-MEMO-Linux.txt  INSTALL-Mac-Linux-FreeBSD.txt  INSTALL-OSX-Homebrew.txt  INSTALL-Windows.txt  INSTALL-openSUSE.txt  LICENSE-AND-CREDITS.txt  RELEASE-NOTES.txt  SECURITY.txt  SOCKETNOTES.txt  SSL-NOTES.txt  WIPE-USERS-ACCOUNTS.txt
nbproject/: Package-Default.bash  configurations.xml  project.xml
ot-sample-data/: CLIENT-COMMANDS.txt  client.cfg  command-line-ot.opt  server.cfg
ot-sample-data-clean/: CLIENT-COMMANDS.txt  client.cfg  command-line-ot.opt  ot_init.cfg  server.cfg
project/: makeproto.bat  open-transactions.sln  setup.nsi  setup_x64.nsi
sample-contracts/: NOTES.txt  localhost.xml  silver.otc  silver.xml  test-server-contract.otc  tokens.otc
sample-data/: command-line-ot.opt  createmint-sample.sh
scripts/: README.txt  activate_two_way_trade.ot  create_escrow1.ot  create_smartcontract.ot  opentxs  opentxs.sh  run_opentxs.bat  sign_trade_as_alice.ot  sign_trade_as_bob.ot
src/: Makefile.am  UTIL_NOTES.txt  opentxs.pc.in
src/bigint/: BigInteger.cc  BigIntegerAlgorithms.cc  BigIntegerUtils.cc  BigUnsigned.cc  Makefile.am  sample.cc
src/createmint/: main.cpp
src/irrxml/: Makefile.am  irrXML.cpp
src/lucre/: Makefile  Makefile.am  bank-sign.cpp  bankdemo.cpp  bankimp.cpp  coin-request.cpp  coin-unblind.cpp
src/ot/: main.cpp
src/otapi/: Makefile.am  OTAPI.cpp  OTAPI_Basic.cpp  OTAPI_Wrapper.cpp  OTClient.cpp  OTMadeEasy.cpp  OTServerConnection.cpp  OT_ME.cpp  OpenTransactions.cpp  _stdafx.cpp  ot_client.cfg  otapi.rc  otapicli.cpp  testclient.cpp  testread.cpp  testwrite.cpp  xmlrpcxx_client.cpp
src/otcreatemint/: main.cpp
src/otd/: _stdafx.cpp  main.cpp  ot.rc
src/otlib/: Bitcoin.pb.cpp  Generics.pb.cpp  Generics.proto  Makefile  Makefile.am  Markets.pb.cpp  Markets.proto  Moneychanger.pb.cpp  Moneychanger.proto  OTASCIIArmor.cpp  OTAccount.cpp  OTAgreement.cpp  OTAssetContract.cpp  OTAsymmetricKey.cpp  OTBasket.cpp  OTBylaw.cpp  OTCachedKey.cpp  OTCheque.cpp  OTContract.cpp  OTCredential.cpp  OTCron.cpp  OTCronItem.cpp  OTCrypto.cpp  OTData.cpp  OTDataCheck.cpp  OTDigitalCash.cpp  OTEntity.cpp  OTEnvelope.cpp  OTIdentifier.cpp  OTInstrument.cpp  OTItem.cpp  OTKeyring.cpp  OTLedger.cpp  OTLog.cpp  OTMarket.cpp  OTMasterKey.cpp  OTMessage.cpp  OTMessageBuffer.cpp  OTMint.cpp  OTOffer.cpp  (+31 more)
src/otlib/bigint/: BigInteger.cc  BigUnsignedInABase.cc  Makefile.am  testsuite.cc
src/otlib/irrxml/: Makefile.am  irrXML.cpp
src/otlib/lucre/: Makefile.am  bank-new.cpp  bank-verify.cpp  bankimp.cpp  banktest.cpp  banktest2.cpp  coin-request.cpp
src/otlib/otext/: Makefile.am  Timer.cpp  anyoption.cpp  easyzlib.c  mkcert.c  mkcert.cpp
src/otlib/otprotob/: Makefile.am  Markets.proto
src/otlib/protobOT/: Makefile.am
src/otlib/simpleini/: ConvertUTF.cpp  snippets.cpp
src/otmint/: _stdafx.cpp  main.cpp  otmint.rc
src/ots/: OTClientConnection.cpp  OTServer.cpp  _stdafx.cpp  otserver.rc  testserver.cpp  xmlrpcxx_server.cpp
src/otserver/: OTClientConnection.cpp  OTServer.cpp  testserver.cpp  xmlrpcxx_server.cpp
src/simpleini/: ConvertUTF.cpp  SimpleIni.sln  SimpleIni.vcproj  package.cmd  simpleini.dsp  simpleini.dsw
src/tests/demangling/: main.cpp
src/tests/locks/: main.cpp
src/tests/references/: main.cpp
ssl/: Makefile  NOTES.txt  client.cnf  clientcert.pem  clientkey.pem  clientreq.pem  dh1024.pem  dh512.pem  root.cnf  root.pem  root.srl  rootkey.pem  rootreq.pem  server.cnf  server.pem  serverCA.cnf  serverCA.pem  serverCA.srl  serverCAcert.pem  serverCAkey.pem  serverCAreq.pem  servercert.pem  serverkey.pem  serverreq.pem
swig/: buildwrappers.bat  buildwrappers.sh  buildwrappers.sh.mac
testwallet/: A-README.txt  API-README.txt  Acct.cs  Acct.java  AddressBook.cs  AddressBook.java  AskData.cs  AskData.java  BidData.cs  BidData.java  BitcoinAcct.cs  BitcoinAcct.java  BitcoinServer.cs  BitcoinServer.java  Blob.cs  Blob.java  Contact.cs  Contact.java  ContactAcct.cs  ContactAcct.java  ContactNym.cs  ContactNym.java  Displayable.cs  Displayable.java  LoomServer.cs  LoomServer.java  Makefile  Makefile.API  Makefile.CPP_API  Makefile.JNI_API_Linux  Makefile.JNI_API_MAC_OSX  Makefile.linux  Makefile.testwallet  MarketData.cs  MarketData.java  MarketList.cs  MarketList.java  OTAPI.cpp  OTAPI.h  OTAPI.i  (+124 more)
transaction/: Makefile  Makefile.linux  OTClientConnection.cpp  OTClientConnection.h  OTMessageBuffer.cpp  OTMessageBuffer.h  OTServer.cpp  OTServer.h  createmint  main.h  notaryServer-Windows.xml  notaryServer.xml  ot_server.cfg  server.cpp  testserver.cpp  transaction  transaction.1  xmlrpcxx_server.cpp
(+1314 files in other folders)
